@@ -12,6 +12,7 @@
 - extended `Total.readfile(path, [type])` by adding a new type `datauri`
 - fixed returing collections from the `HTMLParser.find()` method
 - added `extend:String` option in `NEWACTION()` method
+- added `FILECACHE(id, expire, callback, maker, encoding)` method
 
 ========================
 0.0.12
